fix bug where details modal on top right of page gets cut off if there is not enough space and refactor detail modals into their own directory. TODO: remove console.log if there are any and fix edge cases

--- a/www/static/css/nms.css
+++ b/www/static/css/nms.css
@@ -100,7 +100,10 @@ div.SplitPane.soloPane2.horizontal > .Pane2 {
     color: white;
 }
 
-.details-body {padding: 2px 8px;}
+.details-body {
+  padding: 2px 8px;
+  background-color: #fefefe;
+}
 
 .details-table {
   padding: 2px;
